# buffetty

./: Cargo.toml
.github/workflows/: deploy.yml
alacritty/: Cargo.toml
alacritty/src/: event.rs  lib.rs  main.rs
alacritty/src/display/: mod.rs
alacritty/src/renderer/: mod.rs
alacritty_gtk/: Cargo.toml
alacritty_gtk/src/: context.rs  main.rs
docs/: architecture.md
packaging/: Dockerfile  build_deb.sh
